alignement fix

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -6,6 +6,7 @@
     padding:10px;
     width: 190px;
     display: inline-block;
+    vertical-align: top;
     a {
       color: #FFFFFF;
     }
